--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "main": "index.js",
   "author": "Mateus da Silva Sousa <mateus.wtv@gmail.com>",
   "license": "MIT",
+  "browserslist": "> 0.25%, not dead",
+  "scripts": {
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production"
+  },
   "dependencies": {
     "babel-loader": "^8.0.6",
     "react": "^16.8.6",
@@ -14,11 +19,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.5.1",
+    "browserlist": "^1.0.1",
     "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1"
+    "postcss": "^7.0.16",
+    "postcss-loader": "^3.0.0",
+    "prettier-eslint": "^8.8.2",
+    "style-loader": "^0.23.1",
+    "webpack-dev-server": "^3.3.1"
   }
 }
