--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-loader": "^8.0.6",
     "react": "^16.8.6",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "webpack": "^4.31.0",
